src/test/ui/mod/mod_file_disambig.stderr
error[E0584]: file for module `mod_file_disambig_aux` found at both mod_file_disambig_aux.rs and mod_file_disambig_aux/mod.rs
  --> $DIR/mod_file_disambig.rs:1:5
   |
LL | mod mod_file_disambig_aux;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: delete or rename one of them to remove the ambiguity

error: aborting due to previous error

